[gd_scene load_steps=25 format=2]

[ext_resource path="res://objects/dialogue_box.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/scene_scripts/scn_ui_dialogue.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/stylebox_panel_blue.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/themes/stylebox_panel_bluedisabled.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/themes/fnt_hud_01.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/themes/stylebox_panel_bluegrey.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/themes/stylebox_panel_white.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="ImageTexture" id=18]

[sub_resource type="StyleBoxFlat" id=21]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 3

[sub_resource type="ImageTexture" id=19]

[sub_resource type="ImageTexture" id=20]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.854902, 0.894118, 0.901961, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 3

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.36, 0.56, 0.6, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 3

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.278431, 0.380392, 0.4, 1 )
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 3

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
bg_color = Color( 0.306, 0.426, 0.45, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_detail = 3
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
bg_color = Color( 0.278431, 0.380392, 0.4, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.141176, 0.188235, 0.2, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_detail = 3
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color( 0.360784, 0.560784, 0.6, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_detail = 3
expand_margin_top = 10.0
expand_margin_bottom = 3.0
shadow_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="Theme" id=22]
default_font = ExtResource( 5 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.141176, 0.188235, 0.2, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/styles/disabled = ExtResource( 4 )
Button/styles/hover = ExtResource( 7 )
Button/styles/normal = ExtResource( 3 )
Button/styles/pressed = ExtResource( 6 )
CheckBox/styles/disabled = SubResource( 16 )
CheckBox/styles/focus = SubResource( 12 )
CheckBox/styles/hover = SubResource( 13 )
CheckBox/styles/hover_pressed = SubResource( 17 )
CheckBox/styles/normal = SubResource( 14 )
CheckBox/styles/pressed = SubResource( 15 )
HSlider/styles/slider = ExtResource( 7 )
Label/colors/font_color = Color( 0, 0, 0, 1 )
OptionButton/icons/arrow = SubResource( 18 )
PanelContainer/styles/panel = SubResource( 21 )
PopupMenu/colors/font_color = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_hover = Color( 0, 0, 0, 1 )
PopupMenu/icons/radio_checked = SubResource( 19 )
PopupMenu/icons/radio_unchecked = SubResource( 20 )
PopupMenu/styles/hover = SubResource( 9 )
PopupMenu/styles/panel = SubResource( 10 )
PopupMenu/styles/panel_disabled = SubResource( 11 )
RichTextLabel/colors/default_color = Color( 0.9, 0.75, 0.45, 1 )
TabContainer/colors/font_color_bg = Color( 0, 0, 0, 1 )
TabContainer/colors/font_color_disabled = Color( 0.141176, 0.188235, 0.2, 1 )
TabContainer/colors/font_color_fg = Color( 0, 0, 0, 1 )
TabContainer/styles/panel = ExtResource( 3 )
TabContainer/styles/tab_bg = SubResource( 7 )
TabContainer/styles/tab_disabled = SubResource( 8 )
TabContainer/styles/tab_fg = SubResource( 6 )

[node name="ScnUiDialogue" type="CanvasLayer"]
visible = false
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DialogueBoxTop" parent="Control" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -540.0
margin_top = 40.0
margin_right = 540.0
margin_bottom = 296.0

[node name="DialogueBoxBottom" parent="Control" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -356.0
margin_right = 540.0
margin_bottom = -100.0

[node name="DialogueBoxMiddleClear" parent="Control" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -128.0
margin_right = 540.0
margin_bottom = 128.0
theme = SubResource( 22 )
